// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button Button Colors 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1mvcqff-Button"
        data-testid="button"
        disabled={true}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Disabled
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1ho4nqc-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Red 600
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-113gg5d-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Magenta 200
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-gajiax-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-199vak6-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-j14r71-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-up5dr-Button"
        data-testid="button"
        disabled={true}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Disabled
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1ajszaf-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-15xsj36-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-j14r71-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-59f11x-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button with icon 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-gajiax-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="css-5zv1of-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-gajiax-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-uao30q-Button"
          >
            Hello world
          </span>
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-gajiax-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="css-1qy2jjj-Button"
          >
            Hello world
          </span>
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Dynamic Button Props 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-dosqfx-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-1xr6sam-Button"
    >
      <span
        className="css-l730ys-Button"
      >
        change me!
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Icon Button Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-gajiax-Button"
        data-testid="button-size-lg"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="css-5zv1of-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-199vak6-Button"
        data-testid="button-size-md"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="css-5zv1of-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-j14r71-Button"
        data-testid="button-size-sm"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="css-5zv1of-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Non Filled Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-123k3g3-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-1xr6sam-Button"
    >
      <span
        className="css-l730ys-Button"
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Regular Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-gajiax-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-1xr6sam-Button"
    >
      <span
        className="css-l730ys-Button"
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;
